--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Vincent Letourneau",
-            "email": "vincent@nanoninja.com"
+            "name": "Naomie Sonny",
+            "email": "sonny.naomie@gmail.com"
         }
     ],
     "minimum-stability": "stable",
